# storage/api-docs/api-docs.json
@@ -232,6 +232,39 @@
                 }
             ]
         },
+        "/users/reportings/flag-mobile-offer/{id}": {
+            "patch": {
+                "tags": [
+                    "usersReportings"
+                ],
+                "operationId": "d32d0e8816aa50cec0c19ecb263289ea",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "App\\Data\\User\\Reporting\\FlagMobileOffer\\Request\\FlagMobileOfferRequestData"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "204": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            },
+            "parameters": [
+                {
+                    "$ref": "#/components/parameters/usersFlagMobileOfferRequestPathParameterData"
+                }
+            ]
+        },
         "/admin/users": {
             "get": {
                 "tags": [
@@ -1549,10 +1582,12 @@
             "LoginRequestData": {
                 "properties": {
                     "phone_number": {
-                        "type": "string"
+                        "type": "string",
+                        "default": "0968259851"
                     },
                     "password": {
-                        "type": "string"
+                        "type": "string",
+                        "default": "2280"
                     }
                 },
                 "type": "object"
@@ -1656,6 +1691,9 @@
                     "id": {
                         "type": "integer"
                     },
+                    "user_id": {
+                        "type": "integer"
+                    },
                     "name_in_english": {
                         "type": "string"
                     },
@@ -1728,6 +1766,9 @@
                     "id": {
                         "type": "integer"
                     },
+                    "user_id": {
+                        "type": "integer"
+                    },
                     "name_in_english": {
                         "type": "string"
                     },
@@ -1767,6 +1808,9 @@
                     },
                     "is_favourite": {
                         "type": "boolean"
+                    },
+                    "is_flagged_by_user": {
+                        "type": "integer"
                     }
                 },
                 "type": "object"
@@ -1921,6 +1965,9 @@
                     "id": {
                         "type": "integer"
                     },
+                    "user_id": {
+                        "type": "integer"
+                    },
                     "name_in_english": {
                         "type": "string"
                     },
@@ -2025,7 +2072,8 @@
             },
             "UserMobileOfferController": {},
             "UserMyMobileOfferOfferController": {},
-            "BlockUserAbstractController": {}
+            "BlockUserAbstractController": {},
+            "FlagMobileOfferAbstractController": {}
         },
         "responses": {
             "200": {
@@ -2145,6 +2193,14 @@
                 }
             },
             "usersBlockUserRequestPathParameterData": {
+                "name": "id",
+                "in": "path",
+                "required": true,
+                "schema": {
+                    "type": "integer"
+                }
+            },
+            "usersFlagMobileOfferRequestPathParameterData": {
                 "name": "id",
                 "in": "path",
                 "required": true,
